# python_rust_learning

./: Cargo.toml  pyproject.toml  today_history.txt
src/: lib.rs
